syntax = "proto3";
option java_multiple_files = true;
option java_package = "message.messages.mv";
package message.messages.mv;
message LifeCycle {
    optional string s = 1;
    
}